<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/youtube_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/ytp_padding">
        <TextView
            android:id="@+id/youtube_preview_tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignStart="@+id/youtube_preview_fl"
            android:layout_alignEnd="@+id/youtube_preview_fl"/>
        <FrameLayout
            android:id="@+id/youtube_preview_fl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/youtube_preview_tv_movie_title">
            <ImageView
                android:id="@+id/youtube_preview_iv_thumb"
                android:contentDescription="@string/video_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/youtube_preview_iv_thumb_overlay"
                android:contentDescription="@string/video_thumbnail_overlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/youtube_preview_button_youtube"
                android:contentDescription="@string/play_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.67"/>
        </FrameLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/youtube_preview_fl"
            android:layout_alignStart="@+id/youtube_preview_fl"
            android:layout_alignEnd="@+id/youtube_preview_fl"
            android:layout_marginTop="@dimen/ytp_padding">
            <ImageView
                android:id="@+id/youtube_preview_youtube_logo"
                android:contentDescription="@string/youtube_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center">
                <Button
                    android:id="@+id/youtube_preview_button_previous"
                    android:contentDescription="@string/previous_small_video_thumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/ytp_padding"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/youtube_preview_iv_1"
                        android:contentDescription="@string/small_video_thumbnail_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/youtube_preview_iv_3"
                        android:contentDescription="@string/small_video_thumbnail_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/youtube_preview_iv_2"
                        android:contentDescription="@string/small_video_thumbnail_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/youtube_preview_iv_small_thumb_overlay"
                        android:contentDescription="@string/small_video_thumbnail_overlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
                <Button
                    android:id="@+id/youtube_preview_button_next"
                    android:contentDescription="@string/next_small_video_thumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/ytp_padding"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</merge>